feat(flake): refactor flake to be consistent with our other one
Adds pre-commit-hooks, a shell.nix, nix flake check before commiting an update, a not breaking nix-index-db and various changes to default configuration. Also applies a common formatting style & cleans other found issues.

--- a/.github/workflows/close-pr.yml
+++ b/.github/workflows/close-pr.yml
@@ -1,9 +1,8 @@
+---
 name: PR Closer
-
 on:
   pull_request:
     types: [opened, reopened]
-
 jobs:
   close-pull-request:
     runs-on: ubuntu-latest
@@ -12,4 +11,5 @@ jobs:
       - uses: codelytv/no-pull-requests@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          message: This is a read only mirror of the Garuda Nix Subsystem. Please submit pull requests at https://gitlab.com/garuda-linux/garuda-nix-subsystem.
+          message: This is a read only mirror of the Garuda Nix Subsystem.
+            Please submit pull requests at https://gitlab.com/garuda-linux/garuda-nix-subsystem.
