--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,10 @@
-stages:
-  - update
-  - tag
-
+---
+stages: [update, tag]
 variables:
   GIT_STRATEGY: clone
-  GIT_AUTHOR_NAME: "Gitlab CI"
-  GIT_AUTHOR_EMAIL: "ci@garudalinux.org"
+  GIT_AUTHOR_NAME: Gitlab CI
+  GIT_AUTHOR_EMAIL: ci@garudalinux.org
   REPO_URL: $CI_SERVER_PROTOCOL://gitlab-ci-token:$ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git
-
 update:
   stage: update
   image: nixpkgs/nix-flakes
@@ -19,20 +16,15 @@ update:
     - "git commit -m 'chore: Bump flakes'"
     - git push "$REPO_URL" HEAD:main
   only:
-    variables:
-      - $UPDATE == "true"
-    refs:
-      - main
-
+    variables: [$UPDATE == "true"]
+    refs: [main]
 tag:
   stage: tag
   image: nixpkgs/nix-flakes
   script:
-    - "nix build .#internal.vm --dry-run"
+    - nix build .#internal.vm --dry-run
     - git tag -f v1
     - git push --atomic -f $REPO_URL v1 HEAD:refs/heads/stable
   only:
-    refs:
-      - main
-    variables:
-      - $UPDATE != "true"
+    refs: [main]
+    variables: [$UPDATE != "true"]
