--- a/docs/book.toml
+++ b/docs/book.toml
@@ -7,6 +7,8 @@ src = "src"
 title = "Garuda Nix Subsystem documentation"
 
 [output.html]
+additional-css = ["theme/css/custom.css"]
 default-theme = "dark"
 git-repository-icon = "fa-code-fork"
 git-repository-url = "https://gitlab.com/garuda-linux/garuda-nix-subsystem"
+site-url = "https://nix.garudalinux.org"
