fix(flake): remove flake-utils override for pre-commit-hooks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ tag:
   script:
     # Test and deploy
     - nix flake check
-    - nix build .#internal.ci --dry-run
+    - nix build .#internal.ci --dry-run >/dev/null
     - git tag -f v2
     - git push --atomic -f $REPO_URL v2 HEAD:refs/heads/stable
   only:
