--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ update:
   image: nixpkgs/nix-flakes:latest
   script:
     - nix flake update
-    - nix flake update ./internal/updater --inputs-from . --override-input nixpkgs "nixpkgs"
+    - nix flake update --flake ./internal/updater --inputs-from . --override-input nixpkgs "nixpkgs"
     - git config --global user.name "$GIT_AUTHOR_NAME"
     - git config --global user.email "$GIT_AUTHOR_EMAIL"
     - git add flake.lock internal/updater/flake.lock
